deps: upgrade libraries for JDK 17 compatibility (KAN-10)
Eclipse Collections 7.0.2 -> 11.1.0, Mockito 1.8.2 -> 4.11.0, JUnit 4.11 -> 4.13.2,
mssql-jdbc 6.1.0.jre7 -> 12.8.1.jre8; add javax.annotation-api for @Resource.
Ignore multi-release module-info duplicates in banDuplicateClasses; regenerate NOTICE files.

Signed-off-by: Devin AI <devin-ai-integration[bot]@users.noreply.github.com>